--- a/src/components/Cast/Cast.module.scss
+++ b/src/components/Cast/Cast.module.scss
@@ -30,7 +30,7 @@
   z-index: 1;
   p {
     padding: 10px 20px;
-    background: #032541;
+    background: #2b2b2b;
     color: #fff;
     font-weight: 600;
   }
