--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -4,8 +4,8 @@
   justify-content: center;
   width: 100%;
   padding: 40px 20px;
-  background: #032541;
-  color: #fff;
+  background: #eee;
+  color: #2b2b2b;
   .FooterContainer {
     display: flex;
     flex-wrap: wrap;
