--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,7 +3,7 @@
   width: 100%;
   justify-content: center;
   align-items: center;
-  background: #032541;
+  background: #eee;
   padding: 20px;
   .HeaderContainer {
     display: flex;
