--- a/src/components/Reviews/Reviews.module.scss
+++ b/src/components/Reviews/Reviews.module.scss
@@ -6,7 +6,7 @@
   li {
     display: block;
     width: 100%;
-    background: #032541;
+    background: #2b2b2b;
     color: #fff;
     padding: 20px;
     border-radius: 10px;
