--- a/src/components/MovieCollection/MovieCollection.module.scss
+++ b/src/components/MovieCollection/MovieCollection.module.scss
@@ -18,7 +18,7 @@
     align-items: center;
     width: 100%;
     height: 82px;
-    background: #032541;
+    background: #2b2b2b;
     padding: 20px;
     color: #fff;
     text-transform: uppercase;
