--- a/src/index.scss
+++ b/src/index.scss
@@ -23,8 +23,7 @@ body {
   width: 100%;
   overflow-x: hidden;
   overflow-y: auto;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   color: #222222;
   background-color: #fdfbfb;
   -webkit-font-smoothing: antialiased;
@@ -80,5 +79,23 @@ h1 {
     font-weight: 800;
     color: #fdfbfb;
     -webkit-text-stroke: 2px #222222;
+  }
+}
+
+.button {
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  border-radius: 50px;
+  padding: 10px 30px;
+  font-weight: 600;
+  color: #fff;
+  background: rgb(34, 150, 49);
+  transition: 0.3s;
+  &:hover,
+  &:focus {
+    background: rgb(48, 173, 64);
   }
 }
