--- a/src/components/Game/Game.module.scss
+++ b/src/components/Game/Game.module.scss
@@ -9,6 +9,7 @@
   flex-wrap: wrap;
   width: 100%;
   gap: 20px;
+  justify-content: center;
   max-width: 700px;
   margin: 0 auto;
   margin-top: 30px;
@@ -35,7 +36,7 @@
       width: 100px;
       height: 100px;
       background: #ccc;
-      border-radius: 5px;
+      border-radius: 8px;
       overflow: hidden;
       z-index: 1;
       // box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
@@ -53,7 +54,7 @@
       min-height: 100px;
       background: #fff;
       padding: 10px 20px;
-      border-radius: 5px;
+      border-radius: 8px;
       border: 1px solid #ccc;
       &:before {
         content: '';
@@ -81,4 +82,35 @@
   align-content: center;
   gap: 20px;
   margin-top: 30px;
+}
+
+.Answers {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  gap: 20px;
+  justify-content: center;
+  max-width: 700px;
+  margin: 0 auto;
+  margin-top: 30px;
+  h2 {
+    text-align: center;
+  }
+  .AnswerBtn {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    width: 100%;
+    padding: 30px;
+    font-size: 20px;
+    font-weight: 600;
+    border: none;
+    cursor: pointer;
+    background: #fff;
+    border-radius: 80px;
+    text-transform: uppercase;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  }
 }
