--- a/src/components/Game/Game.module.scss
+++ b/src/components/Game/Game.module.scss
@@ -111,6 +111,48 @@
     background: #fff;
     border-radius: 80px;
     text-transform: uppercase;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 20px rgba(41, 41, 41, 0.2);
   }
+}
+
+.Letters {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  gap: 10px;
+  justify-content: center;
+  max-width: 700px;
+  margin: 0 auto;
+  margin-top: 30px;
+  .Letter {
+    display: flex;
+    width: 60px;
+    height: 60px;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    background: #fff;
+    border-radius: 8px;
+    font-weight: 600;
+    font-size: 28px;
+    border: none;
+    box-shadow: 0px 0px 20px rgba(41, 41, 41, 0.2);
+    cursor: pointer;
+  }
+}
+
+.WordInput {
+  display: block;
+  width: 100%;
+  text-align: center;
+  padding: 30px;
+  max-width: 700px;
+  margin: 0 auto;
+  margin-top: 30px;
+  outline: none;
+  border: none;
+  box-shadow: inset 3px 3px 3px rgba(41, 41, 41, 0.2);
+  border-radius: 80px;
+  font-weight: 600;
+  font-size: 28px;
 }
